kubernetes/kpt/plex/plex.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: plex
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
  labels:
    app: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
      - name: plex
        image: linuxserver/plex:latest 
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 32400
          protocol: TCP
        - name: plex-ht-control
          containerPort: 3005
          protocol: TCP
        - name: dlna-tcp
          containerPort: 32469
          protocol: TCP
        - name: dlna-udp
          containerPort: 1900
          protocol: UDP
        - name: avahi
          containerPort: 5353
          protocol: UDP
        - name: gdm1
          containerPort: 32410
          protocol: UDP
        - name: gdm2
          containerPort: 32412
          protocol: UDP
        - name: gdm3
          containerPort: 32413
          protocol: UDP
        - name: gdm4
          containerPort: 32414
          protocol: UDP
        volumeMounts:
        - name: media
          mountPath: /media
        - name: plex-config
          mountPath: /config
        - name: recordings
          mountPath: /recordings
      volumes:
        - name: media
          nfs:
            server: gimli.home
            path: /media
        - name: recordings
          nfs:
            server: gimli.home
            path: /recordings    
        - name: plex-config
          nfs:
            server: gimli.home
            path: /appdata/plex         
---
