kubernetes/kpt/plex/plex-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
  annotations:
    metallb.universe.tf/allow-shared-ip: plex
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.204
  selector:
    app: plex
  ports:
  - name: http
    port: 80
    targetPort: 32400
    protocol: TCP
  - name: plex-ht-control
    port: 3005
    targetPort: 3005
    protocol: TCP
  - name: dlna-tcp
    port: 32469
    targetPort: 32469
    protocol: TCP
---

---
apiVersion: v1
kind: Service
metadata:
  name: plex-udp
  namespace: plex
  annotations:
    metallb.universe.tf/allow-shared-ip: plex
spec:
  type: LoadBalancer
  selector:
    app: plex
  ports:
  - name: dlna-udp
    port: 1900
    targetPort: 1900
    protocol: UDP
  - name: avahi
    port: 5353
    targetPort: 5353
    protocol: UDP
  - name: gdm1
    port: 32410
    targetPort: 32410
    protocol: UDP
  - name: gdm2
    port: 32412
    targetPort: 32412
    protocol: UDP
  - name: gdm3
    port: 32413
    targetPort: 32413
    protocol: UDP
  - name: gdm4
    port: 32414
    targetPort: 32414
    protocol: UDP
---
