kubernetes/kpt/plex/plex-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: plex
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - plex.lester.network
    secretName: plex-tls
  rules:
  - host: plex.lester.network
    http:
      paths:
      - path: /
        backend:
          serviceName: plex
          servicePort: 32400
